--- a/host/src/index.css
+++ b/host/src/index.css
@@ -25,7 +25,6 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -65,4 +64,14 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.host__wrapper {
+  background-color: #525252;
+  padding: 2rem;
+}
+
+.host__content {
+  display: flex;
+  gap: 2rem;
 }
